--- a/MoppApp/MoppApp/CustomElements.xib
+++ b/MoppApp/MoppApp/CustomElements.xib
@@ -12,27 +12,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="ldx-7q-Mjm" customClass="SpinnerView">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+        <view contentMode="scaleToFill" id="ldx-7q-Mjm" customClass="SpinnerView" customModule="MoppApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="358" height="330"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Spinner" translatesAutoresizingMaskIntoConstraints="NO" id="8g7-U2-VVg">
-                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEM-PU-aE3">
+                    <rect key="frame" x="154" y="140" width="50" height="50"/>
+                    <viewLayoutGuide key="safeArea" id="1wK-gw-Etn"/>
+                    <color key="tintColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <state key="normal" image="Spinner"/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="8g7-U2-VVg" firstAttribute="trailing" secondItem="PUs-Eo-qBR" secondAttribute="trailing" id="9W2-sW-lhQ"/>
-                <constraint firstItem="8g7-U2-VVg" firstAttribute="bottom" secondItem="PUs-Eo-qBR" secondAttribute="bottom" id="9pc-WJ-EKQ"/>
-                <constraint firstItem="8g7-U2-VVg" firstAttribute="leading" secondItem="PUs-Eo-qBR" secondAttribute="leading" id="R56-2e-PXE"/>
-                <constraint firstItem="8g7-U2-VVg" firstAttribute="top" secondItem="PUs-Eo-qBR" secondAttribute="top" id="ov8-XB-UjF"/>
+                <constraint firstItem="GEM-PU-aE3" firstAttribute="centerX" secondItem="PUs-Eo-qBR" secondAttribute="centerX" id="6WZ-Or-OQx"/>
+                <constraint firstItem="GEM-PU-aE3" firstAttribute="top" secondItem="PUs-Eo-qBR" secondAttribute="top" constant="140" id="xmG-wA-k9C"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="PUs-Eo-qBR"/>
             <connections>
-                <outlet property="spinnerImageView" destination="8g7-U2-VVg" id="EeM-Bl-NhN"/>
+                <outlet property="spinningElement" destination="GEM-PU-aE3" id="OTT-sQ-j6p"/>
             </connections>
-            <point key="canvasLocation" x="-188" y="-276"/>
+            <point key="canvasLocation" x="-254" y="-304"/>
         </view>
     </objects>
     <resources>
